# wiight

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/wiight/: bluezutils.py  wiiweigh.py
tests/: __init__.py
