[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wiight"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jussi Tiira", email = "jussi@j24.fi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "click",
]

[project.urls]
Documentation = "https://github.com/juhi24/wiight#readme"
Issues = "https://github.com/juhi24/wiight/issues"
Source = "https://github.com/juhi24/wiight"

[project.scripts]
wiight = "wiight.wiiweigh:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
system-packages = true
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/wiight tests}"

[tool.coverage.run]
source_pkgs = ["wiight", "tests"]
branch = true
parallel = true
omit = [
  "src/wiight/__about__.py",
]

[tool.coverage.paths]
wiight = ["src/wiight", "*/wiight/src/wiight"]
tests = ["tests", "*/wiight/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
